# pgeon_s4_benchmark

./: .gitignore  Makefile  README.md  benchmark.sh  pretty_results.awk  s4-benchmark.opam
pgeon/: .gitignore  README.md  dune-project  gore_3.txt
pgeon/examples/LJ/: Makefile  lj.txt
pgeon/examples/LJ/tests/: f0.txt  f1.txt  f2.txt  f3.txt  p0.txt  p1.txt  p2.txt  p3.txt  (+3 more)
pgeon/examples/LK/: Makefile
pgeon/lib/: ast.ml  compat.ml  compile.ml  compile.mli  dune  log.ml  log.mli  parse.ml  parse.mli  registry.ml  registry.mli  tableau.ml  tableau.mli  term.ml  term.mli  utils.ml  utils.mli
tableau-workbench/interface/: timer.ml
tableau-workbench/interface/cgi/: Makefile  prover.idl  twbCgi.ml
tableau-workbench/interface/cli/: Makefile  twbCli.ml
tableau-workbench/parsing/: Makefile  ast.ml  entrylib.ml  extCommon.ml  keywords.ml  syntaxChecker.ml
tableau-workbench/sequent/: Makefile  build.ml  dataType.ml  nodePattern.ml  outputBroker.ml  partition.ml  ruleContext.ml  userRule.ml
tableau-workbench/twb/: META
tableau-workbench/types/: Makefile  twbContainer.ml  twbHash.ml  twbList.ml  twbMSet.ml  twbMap.ml  twbSbl.ml  twbSet.ml  twbSingleton.ml
tableau-workbench/utils/: Makefile  OCamlMakefile  make-package-macosx  server.conf
tableau-workbench/visit/: Makefile  cache.ml  data.ml  llist.ml  node.ml  rule.ml  tree.ml  visit.ml
tptp2pgeon_parser/: .gitignore  README.md  dune-project  parse_all.sh  tptp2pgeon_parser.opam
tptp2pgeon_parser/lib/: ast.ml  dune  lexer.mll  parser.mly  status.ml  twb_writer.ml  writer.ml
tptp2pgeon_parser/test/: dune
(+27 files in other folders)
